...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:inputType="textNoSuggestions|textVisiblePassword"
            />
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textNoSuggestions|textVisiblePassword"
            />

...
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="9dp">

        <Button
            android:id="@+id/textViewTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="funDate"
            android:text="@string/timeStart" />
        <Button
            android:id="@+id/eventEndsAtButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="funDate"
            android:text="@string/timeEnd" />
    </TableRow>

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/eventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/arrayEventTypes"
            android:gravity="center" />


...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PeopleNeeded"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/peopleNeeded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

        <Button
            android:id="@+id/createEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create"
            android:layout_marginTop="20dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"/>



...
