<resources>
    <string name="app_name">PlusOne</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
...
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="sport_event">Sports Events</string>
    <string name="food">Food</string>
    <string name="party">Party</string>
    <string name="entertainment">Entertainement</string>
    <string name="learning">Learning</string>
    <string name="others">Others</string>
    <string name="prompt_search">Search...</string>
    <string name="event">Event Name </string>
    <string name="description">Description</string>
    <string name="date">Date </string>
    <string name="timeEnd">Finishes at</string>
    <string name="timeStart">Starts at</string>
    <string name="location"> Location</string>
    <string name="type">Type</string>
    <string name="Subscribe">toggle subscription</string>
    <string name="Unsubscribe">UnSubscribe</string>
    <string name="addAddress">Add Address</string>
    <string name="searchMap">Search</string>
...
