...

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/editTextSearchHome"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:hint="@string/editTextSearch"
                android:inputType="textNoSuggestions|textVisiblePassword" />

            <ImageButton
...

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/buttonSportsEvents"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/sport_event" />

            <Button
                android:id="@+id/buttonFood"
...
                android:id="@+id/buttonEntertainment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/entertainment" />

            <Button
                android:id="@+id/buttonLearning"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/learning" />

            <Button
                android:id="@+id/buttonOthers"
...
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/plusnav" />

    <ImageButton
        android:id="@+id/imageButtonAddEvent2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:layout_marginLeft="315dp"
        android:layout_toRightOf="@+id/editTextSearchHome"
        android:layout_marginTop="350dp"
...
